--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -612,6 +612,14 @@ td.numeric {
   text-align: right;
 }
 
+td .numeric-good {
+  color: #38761d;
+}
+
+td .numeric-bad {
+  color: #b60000;
+}
+
 tbody tr:nth-child(even) {
   background-color: #f2f2f280;
 }
