--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -855,4 +855,7 @@ pre {
 
 /* Needed for Safari to hide the index properly */
 @media print {
-
+  .main {
+    grid-template-columns: 0px auto;
+  }
+}
