--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -852,3 +852,10 @@ pre {
 .code-block code {
   width: 100%;
 }
+
+/* Needed for Safari to hide the index properly */
+@media print {
+  .main {
+    grid-template-columns: 0px auto;
+  }
+}
