Hide figure menu on printing

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -859,4 +859,8 @@ pre {
     grid-template-areas: 'content';
     grid-template-columns: auto;
   }
+
+  .figure-dropdown {
+    display: none;
+  }
 }
