--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -856,6 +856,11 @@ pre {
 /* Needed for Safari to hide the index properly */
 @media print {
   .main {
-    grid-template-columns: 0px auto;
+    grid-template-areas: 'content';
+    grid-template-columns: auto;
+  }
+
+  .figure-dropdown {
+    display: none;
   }
 }
