Support emphasis within italic sections

--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -727,6 +727,10 @@ blockquote::before {
   line-height: 1;
 }
 
+blockquote em {
+  font-style: normal;
+}
+
 /* Footer */
 footer .container {
   display: grid;
