Make it more robust

--- a/src/templates/base/featured_chapters.ejs.html
+++ b/src/templates/base/featured_chapters.ejs.html
@@ -3,7 +3,7 @@
 <% } else { -%>
 {%- set featured_chapter = ("<%- Object.keys(featured_quotes).join('","') %>") | random %}
 <% } -%>
-{%- if request.args.get('feat') != None %}
+{%- if request.args.get('feat') != None and request.args.get('feat') in [ "<%-Object.keys(featured_quotes).join('","') %>"] %}
 {%- set featured_chapter = request.args.get('feat') %}
 {%- endif %}
 
