--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -327,7 +327,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
             {{ render_byline() }}
             {{ self.main_content() }}
         </article>
-        <div class="chapter_links">
+        <div class="chapter-links">
           {{ render_actions() }}
         </div>
         <section class="authors">
