--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -724,7 +724,7 @@ blockquote::before {
   left: -7rem;
   opacity: 0.05;
   font-size: 20rem;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Courier New', 'Courier', monospace;
   line-height: 1;
 }
 
