--- a/src/templates/en/accessibility_statement.html
+++ b/src/templates/en/accessibility_statement.html
@@ -67,6 +67,10 @@
         </p>
 
         <p>
+          We recognise that some of the color choices for our visualizations do not meet WCAG AAA color contrast requirements. We make a conscious effort to use the more contrasting colors and lables to reduce the impact of this. However, we also believe that with the detailed descriptions provided for each visualizations, plus access to the underlying data itself, the takeaways from all the visualisations are still accessible to all. We aim to improve the accessibility of our visualisation colour schemes in in future years.
+        </p>
+
+        <p>
           In some chapters, we also include other content on the site, not created by ourselves, including YouTube videos, PDF links or links to other articles, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
         </p>
 
