--- a/src/templates/en/accessibility_statement.html
+++ b/src/templates/en/accessibility_statement.html
@@ -67,7 +67,7 @@
         </p>
 
         <p>
-          We recognise that some of the color choices for our visualizations do not meet WCAG AAA color contrast requirements. We make a conscious effort to use the more contrasting colors and lables to reduce the impact of this. However, we also believe that with the detailed descriptions provided for each visualizations, plus access to the underlying data itself, the takeaways from all the visualisations are still accessible to all. We aim to improve the accessibility of our visualisation colour schemes in in future years.
+          We recognize that some of the color choices for our visualizations do not meet WCAG color contrast requirements. We make a conscious effort to use the more contrasting colors and labels to reduce the impact of this. However, we also believe that with the detailed descriptions provided for each visualization, plus access to the underlying data itself, the takeaways from all the visualizations are still accessible. We aim to improve the accessibility of our visualization color schemes in in future years.
         </p>
 
         <p>
