Add translation placeholders

--- a/src/templates/fr/accessibility_statement.html
+++ b/src/templates/fr/accessibility_statement.html
@@ -66,6 +66,10 @@
           Nous utilisons également Google Sheets pour certaines visualisations interactives, qui peuvent également ne pas être conformes aux normes d’accessibilité WCAG. Celles-ci sont chargées via des <code>iframes</code>, nous fournissons des images pour toutes nos illustrations et affichons uniquement des visualisations interactives lorsque le logiciel client le prend en charge. Si vous utilisez un navigateur Web et que vous ne souhaitez pas afficher les visualisations interactives, les images peuvent être appliquées en ajoutant un paramètre <code>?print</code> pour tous les chapitres, <a href="./2020/accessibility?print">consultez le chapitre Accessibilité en version imprimable</a> pour un exemple de ce type. Nous pouvons chercher à rendre cette fonctionnalité plus facile à activer si nécessaire, mais toutes les visualisations ont des descriptions textuelles détaillées, nous ne pensons donc pas que cela soit nécessaire. Si vous pensez que c’est une erreur, <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">n'hésitez pas à nous le dire</a>.
         </p>
 
+        {# TODO - Translate this <p>
+          In some chapters, we also include other content on the site, not created by ourselves, including YouTube videos, PDF links or links to other articles, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
+        </p> #}
+
         <p>
           Dans certains chapitres, nous incluons également d’autres contenus sur le site, non créés par nous-mêmes, y compris des vidéos YouTube, des liens PDF ou des liens vers d’autres articles, qui ne répondent pas aux critères stricts exigés par les WCAG 2.1 niveau AAA. Voir la note ci-dessous sur le contenu externe.
         </p>
