--- a/src/templates/es/accessibility_statement.html
+++ b/src/templates/es/accessibility_statement.html
@@ -66,6 +66,10 @@
           También usamos Google Sheets para algunas visualizaciones interactivas, que también puede no cumplir con los estándares de accesibilidad WCAG. Estos son cargados vía <code>iframes</code> y proporcionamos imágenes para todas nuestras figuras, y solo mostramos visualizaciones interactivas cuando el software cliente lo soporta. Si utiliza un navegador web y no desea ver las visualizaciones interactivas, entonces las imágenes se pueden hacer ver agregando un <code>?print</code> como parámetro de consulta a cualquiera de los capítulos, <a href="./2020/accessibility?print">vea el capítulo de Accesibilidad en modo de impresión</a> para ver un ejemplo. Podemos buscar que esta funcionalidad sea más fácil de activar si es necesario, pero todas las visualizaciones tienen descripciones de texto detalladas, por lo que no creemos que sea necesario. Por favor <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">haznos saber</a> si estamos en lo cierto o no acerca de esto.
         </p>
 
+        {# TODO - Translate this <p>
+          In some chapters, we also include other content on the site, not created by ourselves, including YouTube videos, PDF links or links to other articles, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
+        </p> #}
+
         <p>
           En algunos capítulos, también incluimos otro contenido en el sitio, no creado por nosotros, incluidos videos de YouTube, enlaces PDF o enlaces a otros artículos, que pueden no cumplir con los estrictos criterios requeridos por WCAG 2.1 nivel AAA. Consulte la nota a continuación sobre contenido externo.
         </p>
