--- a/src/templates/ja/accessibility_statement.html
+++ b/src/templates/ja/accessibility_statement.html
@@ -66,6 +66,10 @@
           また、一部のインタラクティブな視覚化にはGoogleシートを使用していますが、これもWCAGアクセシビリティ基準に準拠していない可能性があります。これらは<code>iframes</code>を介して読み込まれ、すべての図形に画像を提供していて、クライアントソフトウェアがこれをサポートしている場合のみ、インタラクティブな視覚化を表示します。ブラウザーを使用していて、インタラクティブな視覚化を表示したくない場合、章のいずれかに<code>?print</code>クエリパラメータを追加することで、<a href="./2020/accessibility?print">アクセシビリティの印刷モードで表示</a>できます。必要に応じて、この機能をより簡単に有効化できるようにすることもできますが、すべての視覚化には詳細なテキスト記述があるので、これは必要ないと考えています。<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">間違っていたらお知らせください</a>。
         </p>
 
+        {# TODO - Translate this <p>
+          In some chapters, we also include other content on the site, not created by ourselves, including YouTube videos, PDF links or links to other articles, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
+        </p> #}
+
         <p>
           また、一部の章では、YouTubeの動画やPDFリンク、他の記事へのリンクなど、WCAG 2.1レベルAAAで要求される厳しい基準を満たさない、自分たちで作成したもの以外のコンテンツをサイト上に掲載しています。外部コンテンツについては、以下の注意事項を参照してください。
         </p>
