--- a/src/templates/hi/accessibility_statement.html
+++ b/src/templates/hi/accessibility_statement.html
@@ -67,9 +67,8 @@
         </p>
 
         {# TODO - Translate this <p>
-          In some chapters, we also include other content on the site, not created by ourselves, including YouTube videos, PDF links or links to other articles, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
+          We recognize that some of the color choices for our visualizations do not meet WCAG color contrast requirements. We make a conscious effort to use the more contrasting colors and labels to reduce the impact of this. However, we also believe that with the detailed descriptions provided for each visualization, plus access to the underlying data itself, the takeaways from all the visualizations are still accessible to many. We aim to improve the accessibility of our visualization color schemes in in future years.
         </p> #}
-
         <p>
           कुछ अध्यायों में, हम साइट पर अन्य सामग्री भी शामिल करते हैं, जो हमारे  द्वारा नहीं बनाई गई हैं, जिनमें यूट्यूब वीडियो, पीडीएफ लिंक या अन्य लेखों के लिंक शामिल हैं, जो WCAG 2.1 स्तर AAA के लिए आवश्यक सख्त मानदंडों को पूरा नहीं करते हैं। बाहरी सामग्री पर नीचे नोट देखें।
         </p>
