--- a/src/templates/es/accessibility_statement.html
+++ b/src/templates/es/accessibility_statement.html
@@ -67,9 +67,8 @@
         </p>
 
         {# TODO - Translate this <p>
-          In some chapters, we also include other content on the site, not created by ourselves, including YouTube videos, PDF links or links to other articles, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
+          We recognize that some of the color choices for our visualizations do not meet WCAG color contrast requirements. We make a conscious effort to use the more contrasting colors and labels to reduce the impact of this. However, we also believe that with the detailed descriptions provided for each visualization, plus access to the underlying data itself, the takeaways from all the visualizations are still accessible to many. We aim to improve the accessibility of our visualization color schemes in in future years.
         </p> #}
-
         <p>
           En algunos capítulos, también incluimos otro contenido en el sitio, no creado por nosotros, incluidos videos de YouTube, enlaces PDF o enlaces a otros artículos, que pueden no cumplir con los estrictos criterios requeridos por WCAG 2.1 nivel AAA. Consulte la nota a continuación sobre contenido externo.
         </p>
