--- a/src/templates/ja/accessibility_statement.html
+++ b/src/templates/ja/accessibility_statement.html
@@ -67,9 +67,8 @@
         </p>
 
         {# TODO - Translate this <p>
-          In some chapters, we also include other content on the site, not created by ourselves, including YouTube videos, PDF links or links to other articles, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
+          We recognize that some of the color choices for our visualizations do not meet WCAG color contrast requirements. We make a conscious effort to use the more contrasting colors and labels to reduce the impact of this. However, we also believe that with the detailed descriptions provided for each visualization, plus access to the underlying data itself, the takeaways from all the visualizations are still accessible to many. We aim to improve the accessibility of our visualization color schemes in in future years.
         </p> #}
-
         <p>
           また、一部の章では、YouTubeの動画やPDFリンク、他の記事へのリンクなど、WCAG 2.1レベルAAAで要求される厳しい基準を満たさない、自分たちで作成したもの以外のコンテンツをサイト上に掲載しています。外部コンテンツについては、以下の注意事項を参照してください。
         </p>
