--- a/src/templates/zh-CN/accessibility_statement.html
+++ b/src/templates/zh-CN/accessibility_statement.html
@@ -67,9 +67,8 @@
         </p>
 
         {# TODO - Translate this <p>
-          In some chapters, we also include other content on the site, not created by ourselves, including YouTube videos, PDF links or links to other articles, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
+          We recognize that some of the color choices for our visualizations do not meet WCAG color contrast requirements. We make a conscious effort to use the more contrasting colors and labels to reduce the impact of this. However, we also believe that with the detailed descriptions provided for each visualization, plus access to the underlying data itself, the takeaways from all the visualizations are still accessible to many. We aim to improve the accessibility of our visualization color schemes in in future years.
         </p> #}
-
         <p>
           在一些章节中，我们还在网站上包含了其他内容，这些内容不是我们自己创建的，包括YouTube视频、PDF链接或其他文章的链接，这些都不符合WCAG 2.1级AAA的严格标准。请参阅下面关于外部内容的说明。
         </p>
