--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -88,6 +88,11 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% block author %}Author{% endblock %}
 {% block authors %}Authors{% endblock %}
 
+{% block reactions %}Reactions{% endblock %}
+{% block likes %}Likes{% endblock %}
+{% block reposts %}Reposts{% endblock %}
+{% block replies %}Replies{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} on Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} on GitHub{% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} on LinkedIn{% endmacro %}
