--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -153,44 +153,55 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
 {% macro render_webmentions() %}
   <h2 id="reactions">
     <a href="#reactions" class="anchor-link">{{ self.reactions() }}</a>
-    <div class="reactions">
-      <div class="reaction-tabs" role="tablist" aria-label="Reaction Tabs">
-        <button
-          role="tab"
-          aria-selected="true"
-          aria-controls="likes-panel"
-          id="likes-tab"
-          tabindex="0"
-        >
-          <span id="likes-count">0</span> {{ self.likes() }}
-        </button>
-        <button
-          role="tab"
-          aria-selected="false"
-          aria-controls="reposts-panel"
-          id="reposts-tab"
-          tabindex="-1"
-        >
-          <span id="reposts-count">0</span> {{ self.reposts() }}
-        </button>
-        <button
-          role="tab"
-          aria-selected="false"
-          aria-controls="replies-panel"
-          id="replies-tab"
-          tabindex="-1"
-        >
-          <span id="replies-count">0</span> {{ self.replies() }}
-        </button>
-      </div>
-      <div id="likes-panel" role="tabpanel" tabindex="0" aria-labelledby="likes-tab">
-      </div>
-      <div id="reposts-panel" role="tabpanel" tabindex="0" aria-labelledby="reposts-tab" hidden>
-      </div>
-      <div id="replies-panel" role="tabpanel" tabindex="0" aria-labelledby="replies-tab" hidden>
-      </div>
-    </div>
   </h2>
+  <div class="reactions">
+    <div class="reaction-tabs" role="tablist" aria-label="Reaction Tabs">
+      <button
+        role="tab"
+        aria-selected="true"
+        aria-controls="likes-panel"
+        id="likes-tab"
+        tabindex="0"
+      >
+        <span id="likes-count">0</span> {{ self.likes() }}
+      </button>
+      <button
+        role="tab"
+        aria-selected="false"
+        aria-controls="reposts-panel"
+        id="reposts-tab"
+        tabindex="-1"
+      >
+        <span id="reposts-count">0</span> {{ self.reposts() }}
+      </button>
+      <button
+        role="tab"
+        aria-selected="false"
+        aria-controls="replies-panel"
+        id="replies-tab"
+        tabindex="-1"
+      >
+        <span id="replies-count">0</span> {{ self.replies() }}
+      </button>
+      <button
+        role="tab"
+        aria-selected="false"
+        aria-controls="mentions-panel"
+        id="mentions-tab"
+        tabindex="-1"
+      >
+        <span id="mentions-count">0</span> {{ self.mentions() }}
+      </button>
+    </div>
+    <div id="likes-panel" role="tabpanel" tabindex="0" aria-labelledby="likes-tab">
+    </div>
+    <div id="reposts-panel" role="tabpanel" tabindex="0" aria-labelledby="reposts-tab" hidden>
+    </div>
+    <div id="replies-panel" role="tabpanel" tabindex="0" aria-labelledby="replies-tab" hidden>
+    </div>
+    <div id="mentions-panel" role="tabpanel" tabindex="0" aria-labelledby="mentions-tab" hidden>
+    </div>
+  </div>
 {% endmacro %}
 
 {% macro render_authors() %}
