--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -92,6 +92,7 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% block likes %}Likes{% endblock %}
 {% block reposts %}Reposts{% endblock %}
 {% block replies %}Replies{% endblock %}
+{% block mentions %}Mentions{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} on Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} on GitHub{% endmacro %}
