Adds translateable strings for JS code

--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -163,7 +163,8 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
         id="likes-tab"
         tabindex="0"
       >
-        <span id="likes-count">0</span> {{ self.likes() }}
+        <span id="likes-count">0</span> <span data-translation class="like-singular">{{ self.like() }}</span>
+        <span data-translation class="like-plural">{{ self.likes() }}</span>
       </button>
       <button
         role="tab"
@@ -172,7 +173,8 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
         id="reposts-tab"
         tabindex="-1"
       >
-        <span id="reposts-count">0</span> {{ self.reposts() }}
+        <span id="reposts-count">0</span> <span data-translation class="repost-singular">{{ self.repost() }}</span>
+        <span data-translation class="repost-plural">{{ self.reposts() }}</span>
       </button>
       <button
         role="tab"
@@ -181,7 +183,8 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
         id="replies-tab"
         tabindex="-1"
       >
-        <span id="replies-count">0</span> {{ self.replies() }}
+        <span id="replies-count">0</span> <span data-translation class="reply-singular">{{ self.reply() }}</span>
+        <span data-translation class="reply-plural">{{ self.replies() }}</span>
       </button>
       <button
         role="tab"
@@ -190,16 +193,17 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
         id="mentions-tab"
         tabindex="-1"
       >
-        <span id="mentions-count">0</span> {{ self.mentions() }}
+        <span id="mentions-count">0</span> <span data-translation class="mention-singular">{{ self.mention() }}</span>
+        <span data-translation class="mention-plural">{{ self.mentions() }}</span>
       </button>
     </div>
-    <div id="likes-panel" role="tabpanel" tabindex="0" aria-labelledby="likes-tab">
+    <div id="likes-panel" role="tabpanel" tabindex="0" aria-labelledby="likes-tab" data-like-text="{{ self.like_reaction_text() }}">
     </div>
-    <div id="reposts-panel" role="tabpanel" tabindex="0" aria-labelledby="reposts-tab" hidden>
+    <div id="reposts-panel" role="tabpanel" tabindex="0" aria-labelledby="reposts-tab" data-repost-text="{{ self.repost_reaction_text() }}" hidden>
     </div>
-    <div id="replies-panel" role="tabpanel" tabindex="0" aria-labelledby="replies-tab" hidden>
+    <div id="replies-panel" role="tabpanel" tabindex="0" aria-labelledby="replies-tab" data-reply-text="{{ self.reply_reaction_text() }}" hidden>
     </div>
-    <div id="mentions-panel" role="tabpanel" tabindex="0" aria-labelledby="mentions-tab" hidden>
+    <div id="mentions-panel" role="tabpanel" tabindex="0" aria-labelledby="mentions-tab" data-mention-text="{{ self.mention_reaction_text() }}" hidden>
     </div>
   </div>
 {% endmacro %}
