--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -89,10 +89,20 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% block authors %}Authors{% endblock %}
 
 {% block reactions %}Reactions{% endblock %}
+
+{% block like %}Like{% endblock %}
+{% block repost %}Repost{% endblock %}
+{% block reply %}Reply{% endblock %}
+{% block mention %}Mention{% endblock %}
 {% block likes %}Likes{% endblock %}
 {% block reposts %}Reposts{% endblock %}
 {% block replies %}Replies{% endblock %}
 {% block mentions %}Mentions{% endblock %}
+
+{% block like_reaction_text %}liked this chapter{% endblock %}
+{% block repost_reaction_text %}reposted this chapter{% endblock %}
+{% block reply_reaction_text %}View source of reply by{% endblock %}
+{% block mention_reaction_text %}View source of mention by{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} on Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} on GitHub{% endmacro %}
