--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -88,6 +88,22 @@ Nossa missão é combinar as estatísticas brutas e as tendências do HTTP Archi
 {% block author %}Autor(a){% endblock %}
 {% block authors %}Autores{% endblock %}
 
+{% block reactions %}Reactions{% endblock %}
+
+{% block like %}Like{% endblock %}
+{% block repost %}Repost{% endblock %}
+{% block reply %}Reply{% endblock %}
+{% block mention %}Mention{% endblock %}
+{% block likes %}Likes{% endblock %}
+{% block reposts %}Reposts{% endblock %}
+{% block replies %}Replies{% endblock %}
+{% block mentions %}Mentions{% endblock %}
+
+{% block like_reaction_text %}liked this chapter{% endblock %}
+{% block repost_reaction_text %}reposted this chapter{% endblock %}
+{% block reply_reaction_text %}View source of reply by{% endblock %}
+{% block mention_reaction_text %}View source of mention by{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} no Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} no GitHub{% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} no LinkedIn{% endmacro %}
