--- a/src/templates/es/base.html
+++ b/src/templates/es/base.html
@@ -88,6 +88,18 @@
 {% block author %}Autor(a){% endblock %}
 {% block authors %}Autores{% endblock %}
 
+{% block reactions %}reacciones{% endblock %}
+{% block source %}ver fuente{% endblock %}
+
+{% block like %}gusta{% endblock %}
+{% block repost %}repost{% endblock %}
+{% block reply %}respuesta{% endblock %}
+{% block mention %}mencionar{% endblock %}
+{% block likes %}gustos{% endblock %}
+{% block reposts %}reposts{% endblock %}
+{% block replies %}respuestas{% endblock %}
+{% block mentions %}menciones{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} en Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} en GitHub{% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} en LinkedIn{% endmacro %}
