--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -88,6 +88,18 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% block author %}Auteur·ice{% endblock %}
 {% block authors %}Auteur·ice·s{% endblock %}
 
+{% block reactions %}Réactions{% endblock %}
+{% block source %}Voir la source{% endblock %}
+
+{% block like %}comme{% endblock %}
+{% block repost %}republier{% endblock %}
+{% block reply %}réponse{% endblock %}
+{% block mention %}mention{% endblock %}
+{% block likes %}aime{% endblock %}
+{% block reposts %}republier{% endblock %}
+{% block replies %}réponses{% endblock %}
+{% block mentions %}mentions{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} sur Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} sur GitHub{% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} sur LinkedIn{% endmacro %}
