--- a/src/templates/ja/base.html
+++ b/src/templates/ja/base.html
@@ -88,6 +88,18 @@
 {% block author %}著者{% endblock %}
 {% block authors %}著者{% endblock %}
 
+{% block reactions %}反応{% endblock %}
+{% block source %}ソースを見る{% endblock %}
+
+{% block like %}いいね{% endblock %}
+{% block repost %}再投稿{% endblock %}
+{% block reply %}返信{% endblock %}
+{% block mention %}言及{% endblock %}
+{% block likes %}いいね{% endblock %}
+{% block reposts %}再投稿{% endblock %}
+{% block replies %}返信{% endblock %}
+{% block mentions %}言及{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}Twitterの@{{twitterHandle}}{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}GitHubの{{gitHubHandle}}{% endmacro %}
 {% macro onLinkedIn(authorName) %}LinkedInの{{authorName}}{% endmacro %}
