--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -88,6 +88,18 @@
 {% block author %}Auteur{% endblock %}
 {% block authors %}Auteurs{% endblock %}
 
+{% block reactions %}Reacties{% endblock %}
+{% block source %}Bron bekijken{% endblock %}
+
+{% block like %}like{% endblock %}
+{% block repost %}repost{% endblock %}
+{% block reply %}antwoord{% endblock %}
+{% block mention %}vermeld{% endblock %}
+{% block likes %}likes{% endblock %}
+{% block reposts %}reposts{% endblock %}
+{% block replies %}antwoorden{% endblock %}
+{% block mentions %}vermeldingen{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} op Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} op GitHub{% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} op LinkedIn{% endmacro %}
