--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -88,6 +88,18 @@ Nossa missão é combinar as estatísticas brutas e as tendências do HTTP Archi
 {% block author %}Autor(a){% endblock %}
 {% block authors %}Autores{% endblock %}
 
+{% block reactions %}Reações{% endblock %}
+{% block source %}Ver fonte{% endblock %}
+
+{% block like %}curtir{% endblock %}
+{% block repost %}repostagem{% endblock %}
+{% block reply %}resposta{% endblock %}
+{% block mention %}menção{% endblock %}
+{% block likes %}curtidas{% endblock %}
+{% block reposts %}repostagens{% endblock %}
+{% block replies %}respostas{% endblock %}
+{% block mentions %}menções{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} no Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} no GitHub{% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} no LinkedIn{% endmacro %}
