--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -88,6 +88,18 @@
 {% block author %}Автор{% endblock %}
 {% block authors %}Авторы{% endblock %}
 
+{% block reactions %}Реакции{% endblock %}
+{% block source %}Посмотреть источник{% endblock %}
+
+{% block like %}hравится{% endblock %}
+{% block repost %}pепост{% endblock %}
+{% block reply %}oтвет{% endblock %}
+{% block mention %}Упоминание{% endblock %}
+{% block likes %}hравится{% endblock %}
+{% block reposts %}pепосты{% endblock %}
+{% block replies %}oтветы{% endblock %}
+{% block mentions %}yпоминания{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} на Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} на GitHub{% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} на LinkedIn{% endmacro %}
