--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -88,6 +88,18 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% block author %}Author{% endblock %}
 {% block authors %}Authors{% endblock %}
 
+{% block reactions %}Reactions{% endblock %}
+{% block source %}View source{% endblock %}
+
+{% block like %}like{% endblock %}
+{% block repost %}repost{% endblock %}
+{% block reply %}reply{% endblock %}
+{% block mention %}mention{% endblock %}
+{% block likes %}likes{% endblock %}
+{% block reposts %}reposts{% endblock %}
+{% block replies %}replies{% endblock %}
+{% block mentions %}mentions{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} on Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} on GitHub{% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} on LinkedIn{% endmacro %}
