--- a/src/templates/tr/base.html
+++ b/src/templates/tr/base.html
@@ -88,6 +88,18 @@ Misyonumuz, HTTP Archive&#8217;ın ham istatistiklerini ve eğilimlerini web top
 {% block author %}Yazar{% endblock %}
 {% block authors %}Yazarlar{% endblock %}
 
+{% block reactions %}Reaksiyonlar{% endblock %}
+{% block source %}Kaynağı görüntüle{% endblock %}
+
+{% block like %}beğenisi{% endblock %}
+{% block repost %}yayınlamak{% endblock %}
+{% block reply %}yanıtı{% endblock %}
+{% block mention %}anma{% endblock %}
+{% block likes %}beğenileri{% endblock %}
+{% block reposts %}gönderileri{% endblock %}
+{% block replies %}yanıtları{% endblock %}
+{% block mentions %}bahseder{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}}Twitter üzerinde{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}}GitHub üzerinde {% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} LinkedIn üzerinde {% endmacro %}
