--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -88,6 +88,18 @@
 {% block author %}Автор{% endblock %}
 {% block authors %}Автори{% endblock %}
 
+{% block reactions %}Реакції{% endblock %}
+{% block source %}Переглянути джерело{% endblock %}
+
+{% block like %}Подобається{% endblock %}
+{% block repost %}репост{% endblock %}
+{% block reply %}відповідь{% endblock %}
+{% block mention %}згадка{% endblock %}
+{% block likes %}Лайки{% endblock %}
+{% block reposts %}репости{% endblock %}
+{% block replies %}відповідає{% endblock %}
+{% block mentions %}згадує{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} у Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} на GitHub{% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} у LinkedIn{% endmacro %}
