--- a/src/templates/zh-CN/base.html
+++ b/src/templates/zh-CN/base.html
@@ -88,6 +88,18 @@
 {% block author %}作者{% endblock %}
 {% block authors %}作者{% endblock %}
 
+{% block reactions %}反应{% endblock %}
+{% block source %}查看源代码{% endblock %}
+
+{% block like %}喜欢{% endblock %}
+{% block repost %}次转发{% endblock %}
+{% block reply %}条回复{% endblock %}
+{% block mention %}提及{% endblock %}
+{% block likes %}个赞{% endblock %}
+{% block reposts %}转帖{% endblock %}
+{% block replies %}回复{% endblock %}
+{% block mentions %}提及{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} 在 Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} 在 GitHub{% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} 在 LinkedIn{% endmacro %}
