--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -88,6 +88,18 @@
 {% block author %}作者{% endblock %}
 {% block authors %}作者{% endblock %}
 
+{% block reactions %}反應{% endblock %}
+{% block source %}查看源代碼{% endblock %}
+
+{% block like %}個喜歡{% endblock %}
+{% block repost %}次轉發{% endblock %}
+{% block reply %}條回复{% endblock %}
+{% block mention %}提及{% endblock %}
+{% block likes %}個贊{% endblock %}
+{% block reposts %}轉帖{% endblock %}
+{% block replies %}回复{% endblock %}
+{% block mentions %}提及{% endblock %}
+
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} GitHub{% endmacro %}
 {% macro onLinkedIn(authorName) %}{{authorName}} LinkedIn{% endmacro %}
