Web mentions translations

--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -94,7 +94,7 @@
 {% block like %}like{% endblock %}
 {% block repost %}repost{% endblock %}
 {% block reply %}antwoord{% endblock %}
-{% block mention %}vermeld{% endblock %}
+{% block mention %}vermelding{% endblock %}
 {% block likes %}likes{% endblock %}
 {% block reposts %}reposts{% endblock %}
 {% block replies %}antwoorden{% endblock %}
