--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -91,7 +91,7 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% block reactions %}Réactions{% endblock %}
 {% block source %}Voir la source{% endblock %}
 
-{% block like %}comme{% endblock %}
+{% block like %}j’aime{% endblock %}
 {% block repost %}republier{% endblock %}
 {% block reply %}réponse{% endblock %}
 {% block mention %}mention{% endblock %}
