French Webmentions translations

--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -92,11 +92,11 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% block source %}Voir la source{% endblock %}
 
 {% block like %}j’aime{% endblock %}
-{% block repost %}republier{% endblock %}
+{% block repost %}républication{% endblock %}
 {% block reply %}réponse{% endblock %}
 {% block mention %}mention{% endblock %}
-{% block likes %}aime{% endblock %}
-{% block reposts %}republier{% endblock %}
+{% block likes %}j’aimes{% endblock %}
+{% block reposts %}républications{% endblock %}
 {% block replies %}réponses{% endblock %}
 {% block mentions %}mentions{% endblock %}
 
